--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -32,7 +32,7 @@
     flex-direction: column; */
     /* align-items: center;
     justify-content: center; */
-    /* background-image: url('../../images/Linda-Kovacs.jpg'); 
+    /* background-image: url('../../images/x.jpg'); 
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center; */
