--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -56,7 +56,7 @@
     height: 40px;
     top: -30px;
     right: -30px;
-    background-image: url('../../images/close.svg');
+    background-image: url('../../images/close_icon.svg');
     background-size: contain;
     z-index: -3;
     border: none;
