--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url(./vendor/normalize.css);
-@import url(./vendor/fonts/fonts.css);
+@import url(./vendor/fonts/font.css);
 @import url(./components/App/App.css);
 @import url(./components/Navigation/Navigation.css);
 @import url(./components/Header/Header.css);
