--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -71,7 +71,7 @@
   margin: auto;
   height: 23px;
   width: 23px;
-  background-image: url('../../images/trash_icon.svg');
+  background-image: url('../../images/trash_icon_black.svg');
   background-position: center;
   background-repeat: no-repeat;
   opacity: .4;
@@ -140,13 +140,6 @@
 }
 
 .news-card__image {
-  max-height: 100%;
-  margin: 0;
-  padding: 0;
-  min-height: 272px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   height: 47%;
   width: 100%;
   border-radius: 16px 16px 0 0;
@@ -215,13 +208,6 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   text-transform: uppercase;
-}
-
-.news-card__anchor {
-  height: 100%;
-  width: 100%;
-  text-decoration: none;
-  color: #1a1b22;
 }
 
 @media screen and (max-width: 1050px) {
