--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,6 +20,7 @@
       padding: 0;
       display: flex;
       align-items: flex-start;
+      flex: auto;
   }
   .footer__item{
       min-width: 112px;
@@ -55,7 +56,7 @@
       .footer__content{
           margin: 0;
           align-content: space-between;
-          justify-content: space-between;
+          justify-content: flex-end;
       }
       .footer__links{
           flex-direction: column;
@@ -64,4 +65,9 @@
           margin-bottom: 20px;
   
       }
+  }
+  @media screen and (max-width:320px){
+    .footer__icon{
+        margin-left: 28px;
+    }
   }
