--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -1,9 +1,14 @@
 .news-card-list {
-  background-color: #F5F6F7;
+  /* background-color: #F5F6F7;
   width: 100%;
   margin: 0;
   padding: 80px 0;
-  position: relative;
+  position: relative; */
+  background-color: #f5f6f7;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   
 }
 
@@ -16,11 +21,13 @@
   display: flex;
   flex-direction: column;
    */
-
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  margin: auto;
+   width: 100%;
+   max-width: 1440px;
+   padding: 80px 104px 80px;
+   box-sizing: border-box;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 .news-card-list__title {
@@ -33,7 +40,7 @@
 }
 
 .news-card-list__container {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(3, minmax(224px, 1fr));
   column-gap: 16px;
   row-gap: 16px;
@@ -42,6 +49,12 @@
   padding: 0;
   margin: 0;
   justify-items: center;
+   */
+   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 16px;
+  row-gap: 16px;
+  list-style: none;
 }
 
 .news-card-list__show-more {
@@ -64,47 +77,78 @@
 
 @media screen and (max-width: 1400px) {
   .news-card-list__wrapper {
-    /* width: calc(100% - 40px * 2); */
+    width: calc(100% - 40px * 2);
   }
 
   .news-card-list__container {
-    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr; */
     grid-column-gap: 8px;
   }
 }
 
-/* @media screen and (max-width: 1200px) {
-  .news-card-list {
+@media screen and (max-width: 1023px) {
+  .news-card-list__wrapper {
+    /* width: calc(100% - 40px * 2); */
+    padding: 40px;
+  }
+  /* .news-card-list {
     padding: 32px 0;
     max-width: calc(100% - 100px);
     margin: 0 auto;
+  } */
+  .news-card-list__container {
+    /* padding: 32px 0;
+    max-width: calc(100% - 100px);
+    margin: 0 auto; */
+    column-gap: 8px;
+    row-gap: 8px;
+  }
+}
+
+/* @media screen and (max-width: 1000px) {
+  .news-card-list__container {
+    grid-template-columns: 1fr 1fr;
+    gap: 8px;
   }
 } */
 
-@media screen and (max-width: 1000px) {
-  .news-card-list__container {
-    /* grid-template-columns: 1fr 1fr; */
-    gap: 8px;
-  }
-}
-
-@media screen and (max-width: 760px) {
-  .news-card-list__wrapper {
+@media screen and (max-width: 767px) {
+  /* .news-card-list__wrapper {
     width: calc(100% - 16px * 2);
-  }
+  } */
 
   .news-card-list__container {
-    grid-template-columns: repeat(2, minmax(224px, 1fr));
+    /* grid-template-columns: repeat(2, minmax(224px, 1fr)); */
+    grid-template-columns: 1fr;
   }
 }
 
-@media screen and (max-width: 525px) {
+/* @media screen and (max-width: 525px) {
   .news-card-list__container {
     grid-template-columns: repeat(1, minmax(224px, 1fr));
   }
   .news-card-list__wrapper {
     width: calc(100% - 16px * 2);
     align-items: center;
+  }
+  .news-card-list__title {
+    font-family: 'Roboto Slab', serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    margin-right: auto;
+  }
+} */
+@media screen and (max-width: 424px) {
+  .news-card-list__container {
+    /* grid-template-columns: repeat(1, minmax(224px, 1fr)); */
+    row-gap: 9px;
+  }
+  .news-card-list__wrapper {
+    /* width: calc(100% - 16px * 2);
+    align-items: center; */
+    padding: 32px 16px;
   }
   .news-card-list__title {
     font-family: 'Roboto Slab', serif;
