--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     margin: 30px 104px;   
     justify-content: space-between;
+    width: 90%;
   }
   .footer__copywright{
       font-family: 'Roboto', sans-serif;
