--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -1,9 +1,9 @@
 .news-card-list {
-  /* background-color: #F5F6F7;
+  background-color: #F5F6F7;
   width: 100%;
   margin: 0;
   padding: 80px 0;
-  position: relative; */
+  /* position: relative; */
   background-color: #f5f6f7;
   width: 100%;
   display: flex;
@@ -23,7 +23,7 @@
    */
    width: 100%;
    max-width: 1440px;
-   padding: 80px 104px 80px;
+   /* padding: 80px 104px 80px; */
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
@@ -37,6 +37,8 @@
   line-height: 46px;
   margin: 0 0 60px;
   color: #000000;
+  align-self: flex-start;
+  padding: 0;
 }
 
 .news-card-list__container {
@@ -55,6 +57,7 @@
   column-gap: 16px;
   row-gap: 16px;
   list-style: none;
+  padding: 0;
 }
 
 .news-card-list__show-more {
@@ -112,18 +115,18 @@
   }
 } */
 
-@media screen and (max-width: 767px) {
-  /* .news-card-list__wrapper {
-    width: calc(100% - 16px * 2);
-  } */
+@media screen and (max-width: 700px) {
+  .news-card-list__wrapper {
+    /* width: calc(100% - 16px * 2); */
+  }
 
   .news-card-list__container {
-    /* grid-template-columns: repeat(2, minmax(224px, 1fr)); */
+    /* grid-template-columns: repeat(2, minmax(224px, 1fr));  */
     grid-template-columns: 1fr;
   }
 }
 
-/* @media screen and (max-width: 525px) {
+@media screen and (max-width: 525px) {
   .news-card-list__container {
     grid-template-columns: repeat(1, minmax(224px, 1fr));
   }
@@ -139,7 +142,8 @@
     line-height: 34px;
     margin-right: auto;
   }
-} */
+}
+
 @media screen and (max-width: 424px) {
   .news-card-list__container {
     /* grid-template-columns: repeat(1, minmax(224px, 1fr)); */
@@ -157,5 +161,8 @@
     font-size: 30px;
     line-height: 34px;
     margin-right: auto;
+  }
+  .news-card-list {
+    padding: 0;
   }
 }
