--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -71,4 +71,8 @@
     .footer__icon{
         margin-left: 28px;
     }
+    .footer__copywright{
+        margin: 38px 0 0 20px;
+        align-self: start;
+    }
   }
