--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -246,3 +246,10 @@
     height: 440px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .news-card {
+    width: 100%;
+    height: 440px;
+  }
+}
