--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -86,6 +86,8 @@
   .news-card-list__container {
     /* grid-template-columns: 1fr 1fr 1fr; */
     grid-column-gap: 8px;
+    display: grid;
+  grid-template-columns: repeat(3, 1fr);
   }
 }
 
