--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -143,6 +143,10 @@
   height: 47%;
   width: 100%;
   border-radius: 16px 16px 0 0;
+  object-fit: cover;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
 }
 
 .news-card__info-container {
